fix(forms): update composer naming

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tentaplane/tentapress-forms",
+    "name": "tentapress/forms",
     "type": "library",
     "license": "MIT",
     "require": {
